--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>My Game</title>
+    <meta charset="UTF-8">
+    <title>Champion Tetris 99</title>
+    <link rel="icon" href="assets/images/logo.png">
     <link rel='stylesheet' href='style.css' />
+
 </head>
 <body>
-<h2>My game </h2>
+<h2>Champion Tetris</h2>
+
+
 <audio id="clearsound" src="sound/pop.ogg" preload="auto"></audio>
 <canvas width='300' height='600'></canvas>
 <button id="playbutton" onclick="playButtonClicked();">Play</button>
