--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 <h2>Champion Tetris</h2>
 
 
-<audio id="clearsound" src="sound/pop.ogg" preload="auto"></audio>
+<audio id="clearsound" src="sound/sample3%20(3).ogg" preload="auto"></audio>
 <canvas width='300' height='600'></canvas>
 <button id="playbutton" onclick="playButtonClicked();">Play</button>
 <script src='js/tetris.js'></script>
 <script src='js/controller.js'></script>
 <script src='js/render.js'></script>
 <script src="JQuery/jquery-3.6.0.min.js"></script>
+<div id="result">
+    <h1>Game Over</h1>
+    <p id="score"></p>
+    <button id="btnRestart" >Restart</button>
+</div>
 </body>
 </html>
